--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
@@ -47,7 +47,7 @@
                     <tr>
                         {# sorting of properties based on query components #}
                         <th>{{ knp_pagination_sortable(pagination, 'Codice', 'a.cod') }}</th>
-                        {#<th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueProduct') }}</th>#}
+                        {#<th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }}</th>#}
                         <th>Immagine</th>
                         <th{% if pagination.isSorted('a.title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.shortDescription') }}</th>
@@ -71,18 +71,18 @@
                         {% endfor %}
                         </td>
                         <td>{{ product.title }}</td>
-                        <td>{{ product.shortDescription }}</td>
+                        <td>{{ product.description }}</td>
                         <td>{% if product.pub == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
                         <td>{% if product.featured == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
                         <td>
                             <div class="btn-group">
-                                <a href="{{ path('update_product_info', {'id' : product.idTblCatalogueProduct}) }}" title="Modifica" class="btn btn-xs btn-warning">Modifica</a>
+                                <a href="{{ path('update_product_info', {'id' : product.id}) }}" title="Modifica" class="btn btn-xs btn-warning">Modifica</a>
                                 <button type="button" class="btn btn-warning btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Apri menù a discesa</span>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path('delete_product', {'id' : product.idTblCatalogueProduct}) }}" title="Elimina" class="delete_product"><i class="fa fa-times"></i> Elimina</a></li>
+                                    <li><a href="{{ path('delete_product', {'id' : product.id}) }}" title="Elimina" class="delete_product"><i class="fa fa-times"></i> Elimina</a></li>
                                 </ul>
                             </div>
                         </td>
