--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -16,7 +16,7 @@
                 <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
                 <ul class="nav nav-third-level collapse">
                     {% for category in categories %}
-                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        <li><a href="{{ path('show_category', {id : category.id}) }}">{{ category.title }}</a></li>
                     {% endfor %}
                 </ul>
             </li>
@@ -65,7 +65,7 @@
                 <li class="col-md-12" style="border-bottom: 1px solid #ddd; margin-bottom:5px;">
                     <div class="col-md-12">
                         <p class="col-md-1">
-                            {{feature.idTblCatalogueFeature}}
+                            {{feature.id}}
                         </p>
                         <p class="col-md-4">
                             <a class="feature-title" href="#" title="Modifica" >{{feature.title}}</a>
@@ -73,8 +73,8 @@
                             <a class="btn btn-outline btn-default btn-xs btn_categoria_chiudi" style="display: none;"><i class="fa fa-lg fa-chevron-up"></i> Chiudi</a>
                         </p>
                         <p class="col-md-4">
-                            <a href="{{ path('update_features', {'id' : feature.idTblCatalogueFeature}) }}" title="Modifica" class="btn btn-primary btn-xs btn-warning"><i class="fa fa-lg fa-edit"></i> Modifica</a>
-                            <a href="{{ path('delete_features', {'id' : feature.idTblCatalogueFeature}) }}" title="Elimina" class="btn btn-primary btn-xs btn-danger"><i class="fa fa-lg fa-times"></i> Elimina</a>
+                            <a href="{{ path('update_features', {'id' : feature.id}) }}" title="Modifica" class="btn btn-primary btn-xs btn-warning"><i class="fa fa-lg fa-edit"></i> Modifica</a>
+                            <a href="{{ path('delete_features', {'id' : feature.id}) }}" title="Elimina" class="btn btn-primary btn-xs btn-danger"><i class="fa fa-lg fa-times"></i> Elimina</a>
                         </p>
                         <div class="col-md-12 featurevalues-container" style="display: none; padding:0 !important">
                             <ul style="list-style: none; margin: 0; padding: 0;">
@@ -92,8 +92,8 @@
                                             <div class="btn-group col-md-4">
                                                 <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">{{ featuresvalue.title }}</a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a href="{{ path('update_featurevalues', {'id' : featuresvalue.idTblCatalogueFeaturevalue}) }}" title="Modifica" ><i class="fa fa-lg fa-edit"></i> Modifica</a></li>
-                                                    <li><a href="{{ path('delete_featurevalues', {'id' : featuresvalue.idTblCatalogueFeaturevalue}) }}" title="Elimina" ><i class="fa fa-lg fa-times"></i> Elimina</a></li>
+                                                    <li><a href="{{ path('update_featurevalues', {'id' : featuresvalue.id}) }}" title="Modifica" ><i class="fa fa-lg fa-edit"></i> Modifica</a></li>
+                                                    <li><a href="{{ path('delete_featurevalues', {'id' : featuresvalue.id}) }}" title="Elimina" ><i class="fa fa-lg fa-times"></i> Elimina</a></li>
                                                     <li class="divider"></li>
                                                     <li><a href="{{ path('create_featurevalues') }}"><i class="fa fa-lg fa-plus"></i> Aggiungi Caratteristica</a></li>
                                                 </ul>
