--- a/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/new.html.twig
@@ -32,7 +32,7 @@
                 <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
                 <ul class="nav nav-third-level collapse">
                     {% for category in categories %}
-                        <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                        <li><a href="{{ path('show_category', {id : category.id}) }}">{{ category.title }}</a></li>
                     {% endfor %}
                 </ul>
             </li>
@@ -63,12 +63,18 @@
                                     {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
                                 </div>
                             </div>
-
                             <div class="col-md-6">
                                 {{ form_label(form.features, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
                                 {{ form_errors(form.features) }}
                                 <div class="col-lg-12 m-l-n">
                                     {{ form_widget(form.features, {'attr': {'class': 'form-control', 'multiple':'true'}}) }}
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    {{ form_errors(form.imageFile) }}
+                                    {{ form_widget(form.imageFile, {'attr': {'class': 'form-control'}}) }}
                                 </div>
                             </div>
 
