--- a/src/IlCleme/CatalogoBundle/Resources/views/Welcome/index.html.twig
+++ b/src/IlCleme/CatalogoBundle/Resources/views/Welcome/index.html.twig
@@ -30,7 +30,7 @@
                     <h5>Prodotti</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{ products }}</h1>
+                    <h1 class="no-margins">{{ count.product }}</h1>
                     {#<div class="stat-percent font-bold text-navy">44% <i class="fa fa-level-up"></i></div>#}
                     <small>Prodotti presenti</small>
                 </div>
@@ -43,7 +43,7 @@
                     <h5>Categorie</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{ categories }}</h1>
+                    <h1 class="no-margins">{{ count.category }}</h1>
                     {#<div class="stat-percent font-bold text-navy">44% <i class="fa fa-level-up"></i></div>#}
                     <small>Categorie presenti</small>
                 </div>
@@ -56,7 +56,7 @@
                     <h5>Feature</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{ features }}</h1>
+                    <h1 class="no-margins">{{ count.feature }}</h1>
                     {#<div class="stat-percent font-bold text-navy">44% <i class="fa fa-level-up"></i></div>#}
                     <small>Feature presenti</small>
                 </div>
@@ -69,7 +69,7 @@
                     <h5>Featurevalues</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{ featurevalues }}</h1>
+                    <h1 class="no-margins">{{ count.featurevalues }}</h1>
                     {#<div class="stat-percent font-bold text-navy">44% <i class="fa fa-level-up"></i></div>#}
                     <small>Featurevalues presenti</small>
                 </div>
