--- a/src/IlCleme/CatalogoBundle/Resources/views/Featurevalue/listcategoryfeaturevalues.html.twig
+++ b/src/IlCleme/CatalogoBundle/Resources/views/Featurevalue/listcategoryfeaturevalues.html.twig
@@ -36,13 +36,13 @@
         </div>
     </div>
     <div class="ibox-content">
-        {{ knp_pagination_filter(pagination, {'title': 'Nome Featurevalue', 'idTblCatalogueFeaturevalue':'Id'}) }}
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Featurevalue', 'id':'Id'}) }}
         <div class="clearfix"></div>
         <div class="table-responsive">
             <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                 <tr>
-                    <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueFeaturevalue') }}</th>
+                    <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }}</th>
                     <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Caratteristica', 'a.title') }}</th>
                     <th>Azioni</th>
                 </tr>
@@ -50,11 +50,11 @@
                 <tbody>
                 {% for featurevalue in pagination %}
                     <tr>
-                        <td>{{featurevalue.idTblCatalogueFeaturevalue}}</td>
+                        <td>{{featurevalue.id}}</td>
                         <td>{{featurevalue.title}}</td>
                         <td>
-                            <a href="{{ path('update_featurevalues', {'id' : featurevalue.idTblCatalogueFeaturevalue}) }}" title="Modifica" class="btn btn-primary btn-xs btn-warning"><i class="fa fa-lg fa-edit"></i> Modifica</a>
-                            <a href="{{ path('delete_featurevalues', {'id' : featurevalue.idTblCatalogueFeaturevalue}) }}" title="Elimina" class="btn btn-primary btn-xs btn-danger"><i class="fa fa-lg fa-times"></i> Elimina</a>
+                            <a href="{{ path('update_featurevalues', {'id' : featurevalue.id}) }}" title="Modifica" class="btn btn-primary btn-xs btn-warning"><i class="fa fa-lg fa-edit"></i> Modifica</a>
+                            <a href="{{ path('delete_featurevalues', {'id' : featurevalue.id}) }}" title="Elimina" class="btn btn-primary btn-xs btn-danger"><i class="fa fa-lg fa-times"></i> Elimina</a>
                         </td>
                     </tr>
                 {% endfor %}
