--- a/src/IlCleme/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
+++ b/src/IlCleme/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
@@ -35,14 +35,14 @@
         </div>
     </div>
     <div class="ibox-content">
-        {{ knp_pagination_filter(pagination, {'title': 'Nome Featurevalue', 'idTblCatalogueFeaturevalue':'Id'}) }}
+        {{ knp_pagination_filter(pagination, {'title': 'Nome Featurevalue', 'id':'Id'}) }}
         <div class="clearfix"></div>
         <div class="table-responsive">
             <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                     <tr>
                         {# sorting of properties based on query components #}
-                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.idTblCatalogueFeaturevalue') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }}</th>
                         <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Featurevalue', 'a.title') }}</th>
                         <th>Azioni</th>
                     </tr>
@@ -50,11 +50,11 @@
                 <tbody>
                     {% for featurevalue in pagination %}
                     <tr>
-                        <td>{{featurevalue.idTblCatalogueFeaturevalue}}</td>
+                        <td>{{featurevalue.id}}</td>
                         <td>{{featurevalue.title}}</td>
                         <td>
-                            <a href="{{ path('update_featurevalues', {'id' : featurevalue.idTblCatalogueFeaturevalue}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
-                            <a href="{{ path('delete_featurevalues', {'id' : featurevalue.idTblCatalogueFeaturevalue}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
+                            <a href="{{ path('update_featurevalues', {'id' : featurevalue.id}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
+                            <a href="{{ path('delete_featurevalues', {'id' : featurevalue.id}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
                         </td>
                     </tr>
                     {% endfor %}
