--- a/src/IlCleme/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/IlCleme/UserBundle/Resources/views/Security/login.html.twig
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{% block title %} Login {% endblock %} - Catalogo Enteweb</title>
+    <title>{% block title %} Login {% endblock %} - Product Manager</title>
 
     <!-- CSS Files -->
     <link href="{{ asset('admin-style/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -21,14 +21,17 @@
         <div>
             <div>
 
-                <h1 class="logo-name">IN+</h1>
+                <h1 class="logo-name">PM+</h1>
 
             </div>
-            <h3>Welcome to IN+</h3>
-            <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-                <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
-            </p>
+            <h3>Welcome in ProductManager</h3>
             <p>Login in. To see it in action.</p>
+            {% if error %}
+                <div class="alert alert-danger alert-dismissable">
+                    <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+                    {{ error.messageKey|trans(error.messageData) }}
+                </div>
+            {% endif %}
             <form action="{{ path('login_route') }}" method="post" class="m-t" role="form">
                 {#<label for="username">Username:</label>#}
                 <div class="form-group">
@@ -50,10 +53,7 @@
                 <p class="text-muted text-center"><small>Do not have an account?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
             </form>
-            {% if error %}
-                <div>{{ error.messageKey|trans(error.messageData) }}</div>
-            {% endif %}
-            <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+            <p class="m-t"> <small>&copy; {{ "now"|date("Y") }}</small> </p>
         </div>
     </div>
 
